# Copyright (c) 2023, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = []

[project]
name = "cuxfilter"
version = "23.08.00"
description = "GPU accelerated cross filtering with cuDF"
readme = { file = "README.md", content_type = "text/markdown" }
authors = [
    {name = "NVIDIA Corporation"},
]
license = { text = "Apache 2.0" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
test = []

[project.urls]
Homepage = "https://github.com/rapidsai/cuxfilter"
Documentation = "https://docs.rapids.ai/api/cuxfilter/stable/"

[tool.setuptools]
license-files = ["LICENSE"]
